fix mibile flexibility

--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -1,5 +1,9 @@
 {
 	"h1.athleteRegistration": "Реєстрація спортсмена на змагання",
+	"h1.athleteManagement": "Керування атлетами",
+	"h3.exerciseDetails": "Деталі вправ",
+	"h3.editParticipant": "Редагувати учасника",
+	"h3.registrationParticipant": "Реєстрація учасника",
 	"button.registrationNoun": "Реєстрація",
 	"button.registrationVerb": "Зареєструвати",
 	"button.login": "Вхід",
@@ -7,23 +11,14 @@
 	"button.cancel": "Скасування",
 	"button.details": "Деталі",
 	"button.delete": "Видалити",
-	"h3.editParticipant": "Редагувати учасника",
-	"h3.registrationParticipant": "Реєстрація учасника",
+	"button.add": "Додати",
 	"button.addParticipant": "Додати спортсмена",
-	"label.addParticipant": "Атлет",
 	"option.selectParticipant": "Виберіть учасника",
-	"label.competition": "Змагання",
 	"option.selectCompetition": "Виберіть змагання",
-	"label.direction": "Напрям",
 	"option.selectDirection": "Виберіть напрям",
-	"label.age": "Вік",
 	"option.selectAge": "Виберіть вік",
-	"label.mastery": "Рівень",
 	"option.selectMastery": "Виберіть рівень майстерності",
-	"label.discipline": "Дисципліна",
 	"option.selectDiscipline": "Оберіть дисципліну",
-	"label.exercise": "Вправа",
-	"h3.exerciseDetails": "Деталі вправ",
 	"table.exercise": "Вправа",
 	"table.descriptions": "Опис",
 	"table.image": "Зображення",
@@ -32,11 +27,22 @@
 	"table.direction": "Напрям",
 	"table.age": "Вік",
 	"table.actions": "Дія",
+	"table.pib": "ПІБ",
+	"label.coach": "Тренер",
 	"label.firstName": "Імʼя",
 	"label.lastName": "Прізвищє",
 	"label.phoneText": "Вкажіть номер телефону обовʼязково",
 	"label.email": "Email",
 	"label.password": "Пароль",
 	"label.passwordStrength": "Міцність пароля",
-	"label.passwordConfirm": "Підтвердити пароль"
+	"label.passwordConfirm": "Підтвердити пароль",
+	"label.exercise": "Вправа",
+	"label.discipline": "Дисципліна",
+	"label.mastery": "Рівень",
+	"label.addParticipant": "Атлет",
+	"label.competition": "Змагання",
+	"label.direction": "Напрям",
+	"label.age": "Вік",
+	"modal.title.editAthlete": "Редагувати спортсмена",
+	"modal.title.addAthlete": "Додати спортсмена"
 }
