--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -9,6 +9,7 @@
 	"button.login": "Вхід",
 	"button.edit": "Оновити",
 	"button.cancel": "Скасування",
+	"button.close": "Вихід",
 	"button.details": "Деталі",
 	"button.delete": "Видалити",
 	"button.add": "Додати",
