--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -31,7 +31,7 @@
 	"table.pib": "ПІБ",
 	"label.coach": "Тренер",
 	"label.firstName": "Імʼя",
-	"label.lastName": "Прізвищє",
+	"label.lastName": "Прізвище",
 	"label.phoneText": "Вкажіть номер телефону обовʼязково",
 	"label.email": "Email",
 	"label.password": "Пароль",
