fix exercise and add form for file load

--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -45,6 +45,9 @@
 	"label.direction": "Напрям",
 	"label.age": "Вік",
 	"label.role": "Ваша роль",
+	"label.uploadFiles": "Завантаження файлів",
+	"label.dragOrClickToUpload": "Натисніть або перетягніть файли сюди",
+	"label.supportedFormats": "Підтримуємі формати:",
 	"modal.title.editAthlete": "Редагувати спортсмена",
 	"modal.title.addAthlete": "Додати спортсмена",
 	"select.chooseRole": "Виберіть вашу роль",
