feat add google in

--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -14,6 +14,7 @@
     "button.delete": "Видалити",
     "button.add": "Додати",
     "button.addParticipant": "Додати спортсмена",
+    "button.loginWithGoogle": "Увійти через Google",
     "option.selectParticipant": "Виберіть учасника",
     "option.selectCompetition": "Виберіть змагання",
     "option.selectDirection": "Виберіть напрям",
