feat add local ua

--- a/frontend/src/locales/ua/translation.json
+++ b/frontend/src/locales/ua/translation.json
@@ -6,6 +6,7 @@
 	"h3.editParticipant": "Редагувати учасника",
 	"h3.registrationParticipant": "Реєстрація учасника",
 	"h3.exercise_protocol": "Протокол обовʼязквих вправи",
+	"h3.total points": "Загальні бали",
 	"h4.total_score": "Загальний бал",
 	"h5.judge": "Суддя",
 	"button.registrationNoun": "Реєстрація",
@@ -17,6 +18,7 @@
 	"button.details": "Деталі",
 	"button.delete": "Видалити",
 	"button.add": "Додати",
+	"button.save": "Зберегти",
 	"button.addParticipant": "Додати спортсмена",
 	"button.loginWithGoogle": "Увійти через Google",
 	"option.selectParticipant": "Виберіть учасника",
@@ -66,6 +68,19 @@
 	"title.step": "Крок",
 	"title.score": "Бал",
 	"title.comment": "Коментар",
+	"title.exercise": "Вправа",
+	"title.description": "Опис",
+	"title.image": "Зображення",
+	"title.completed": "Виконано",
+	"title.exercises_details": "Деталі вправ",
+	"common.success": "Успішно",
+	"common.results_successfully_preserved": "Результати успішно збережені!",
+	"common.could_not_save_results": "Не вдалося зберегти результати!",
+	"common.protocol_successfully_removed": "Протокол успішно видалено!",
+	"common.protocol_successfully_updated": "Протокол успішно оновлено!",
+	"common.required_protocol_removal_parameters_not_found": "Не знайдено обовʼязкові параметри для видалення протоколу!",
+	"common.error": "Помилка",
 	"p.filesIsNotAdded": "Файли не додані",
+	"p.data_are_not_available": "Дані недоступні",
 	"modal.confirmDeleteFile": "Ви впевнені, що хочете видалити цей файл?"
 }
